/* $Id: changelog,v 1.1644 2001-08-09 08:43:48 sandervl Exp $ */

 2001-08-09: Sander van Leeuwen <sandervl@xs4all.nl>
    - USER32:   o Rewrote PostThreadMessage
                  (fixes RealPlayer 8 install)
                o Use WinQueueFromID to query message queue handle of first thread
    - KERNEL32: o Use WinQueueFromID to query message queue handle of new thread

 2001-08-08: knut st. osmundsen <kosmunds@csc.com>
    - Win32k:   o Ignore ERROR_DRIVE_LOCKED (chkdsk/format) error in
                  Pe2Lx::openPath2.

 2001-08-08: Sander van Leeuwen <sandervl@xs4all.nl>
    - SHELL32:  o Fix for shell link with single icon instead of icon group
                o Shell icon save fix (again fopen without binary mode)
    - USER32:   o Icon conversion moved here + fixed
    - KERNEL32: o Removed icon conversion
    - INSTALL:  o Add program object for Registry Editor to Odin folder

 2001-08-07: Sander van Leeuwen <sandervl@xs4all.nl>
    - INSTALL:  o Create Odin folder with program objects for readme, changelog
                  and license files.
    - USER32:   o Added function to create program objects + folders
    - SHELL32:  o Create program objects during installation of windows
                  applications
                  (Desktop objects created on the OS/2 desktop; program objects
                   created in app folder inside Odin folder)
    - KERNEL32: o Put back source files to convert icons and icon groups
                  (not working right yet)

 2001-08-06: Sander van Leeuwen <sandervl@xs4all.nl>
    - KERNEL32: o Check for ERROR_ACCESS_DENIED in CreateProcess
                  (fixes Notes + installers)
                o Memory map fixes (GetCurrentProcess returns handles
                  that are not unique)
                o Init fix for logfile names of multiple processes
                o Support different ordinal base for custom build
    - CUSTOMBUILD:
                o Add SHLWAPI exports + changes for ordinal exports
